--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+
+    <style>
+      .marker {
+        color: red;
+      }
+    </style>
   </head>
   <body>
     <noscript>
@@ -13,5 +19,9 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <!--    高德地图-->
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=81d8cce3ed2e8954b9eb2e1095ba17ae"></script>
+
   </body>
 </html>
+
