--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,12 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <!--    高德地图-->
-    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=81d8cce3ed2e8954b9eb2e1095ba17ae"></script>
+    <link rel="stylesheet" href="https://a.amap.com/jsapi_demos/static/demo-center/css/demo-center.css" />
+
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=81d8cce3ed2e8954b9eb2e1095ba17ae&plugin=AMap.Transfer"></script>
+    <script src="https://a.amap.com/jsapi_demos/static/demo-center/js/demoutils.js"></script>
+<!--    <script type="text/javascript" src="https://cache.amap.com/lbs/static/addToolbar.js"></script>-->
+
 
   </body>
 </html>
-
